improvings - remove redis - incldue hazelcast - downgrade JDK 21 for 19 - using jdbc instead of hibernate - disable virtual threads